fixed the broken UI for now

--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -8,8 +8,8 @@
  * Copyright (c) 2020 Animate.css
  */
 :root {
-    --animate-duration: 1s;
-    --animate-delay: 1s;
+    /* --animate-duration: 1s; */
+    /* --animate-delay: 1s; */
     --animate-repeat: 1
 }
 
